# 2026-02-js-perf

./: .gitignore  README.md  go.mod  go.sum
cmd/http1-server/: main.go
cmd/http2-server/: Cargo.toml
cmd/http2-server/src/: main.rs
cmd/lxs/: http1.go  http2.go  main.go  ndt7.go
cmd/ndt7-server/: main.go  proto.go  serve.go
internal/slogging/: slogging.go
static/: index.html
static/http1/: index.html
static/http2/: index.html
